AC_INIT(configure.in)
AM_INIT_AUTOMAKE(openha, 0.3.6)
AM_CONFIG_HEADER(config.h)
AC_DISABLE_STATIC

AC_ISC_POSIX
CFLAGS=""
dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_STDC
AC_PATH_PROGS(PKGCONFIG, pkg-config)
AC_HEADER_STDC
AM_PROG_LIBTOOL
AC_PREFIX_DEFAULT(/usr/local/cluster)
AM_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --silent"
AC_PROG_INSTALL

AC_PATH_PROGS(GLIBCONFIG, glib-config)
AC_PATH_PROGS(GTKCONFIG, gtk-config)

dnl Checks for libraries.

AC_MSG_CHECKING(glib library flags)
glib_LIBS=`$GLIBCONFIG --libs`
AC_MSG_RESULT($glib_LIBS)
AC_SUBST(glib_LIBS)

AC_MSG_CHECKING(gtk library flags)
gtk_LIBS=`$GTKCONFIG --libs`
AC_MSG_RESULT($gtk_LIBS)
AC_SUBST(gtk_LIBS)

dnl Checks for header files.
AC_MSG_CHECKING(glib includes flags)
glib_CFLAGS=`$GLIBCONFIG --cflags`
AC_MSG_RESULT($glib_CFLAGS)
AC_SUBST(glib_CFLAGS)

AC_MSG_CHECKING(gtk includes flags)
gtk_CFLAGS=`$GTKCONFIG --cflags`
AC_MSG_RESULT($gtk_CFLAGS)
AC_SUBST(gtk_CFLAGS)

AC_MSG_CHECKING(sockio includes flags)
AC_CHECK_HEADERS(sys/sockio.h)
AC_MSG_RESULT($socket_CFLAGS)
AC_SUBST(socket_CFLAGS)


dnl Checks for typedefs, structures, and compiler characteristics.


dnl Checks for library functions.

AC_MSG_CHECKING(socket library function)
AC_CHECK_LIB(socket, recvfrom)
AC_MSG_RESULT($socket_LIBS)
AC_SUBST(socket_LIBS)

AC_MSG_CHECKING(nsl library function)
AC_CHECK_LIB(nsl, gethostbyname)
AC_MSG_RESULT($nsl_LIBS)
AC_SUBST(nsl_LIBS)
dnl Checks for Additional stuffs.

dnl Set PACKAGE SOURCE DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

dnl Set PACKAGE DATA & DOC DIR
dnl packagedatadir=share
packagedocdir=doc
packageprocdir=proc
packagesrvdir=services
packageconfdir=conf

dnl Set PACKAGE DIRS in config.h.
#packagepixmapsdir=${packagedatadir}/pixmaps
packagehelpdir=${packagedatadir}/help
packagemenudir=${packagedatadir}

AC_OUTPUT([
Makefile
src/Makefile
pixmaps/Makefile
openha.spec
])

