INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO

reactor_includedir = $(includedir)/akula/reactor

reactor_include_HEADERS = \
reactor.h \
app_event_demultiplexer_array.h \
os_event_demultiplexer_poll.h \
os_event_demultiplexer_select.h \
reactor_type.h \
reactor_utils.h \
lf_thread_pool.h

