openhapixdir = ${prefix}/pixmaps

openhapix_DATA = \
	frozen_start.xpm red.xpm stopped.xpm unknown.xpm down.xpm frozen_stop.xpm \
	na.xpm started.xpm stopping.xpm up.xpm blue.xpm green.xpm orange.xpm \
	freeze.xpm starting.xpm stop.xpm yellow.xpm black.xpm freeze.xpm

EXTRA_DIST = $(openhapix_DATA) 
